# shapely_extra

./: 404.html  LICENSE  README.md  api.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: python-package.yml  test-package.yml
docs/: api.md  index.md
shapely_extra/: __init__.py  angles.py  grid.py  measure.py  random.py  shapes.py  utils.py
src/shapely_extra/: __init__.py  angles.py  area.py  grid.py  measure.py  random.py  shapes.py  utils.py
test/: test_angles.py  test_grid.py  test_measure.py  test_random.py  test_shapes.py  test_utils.py
