[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shapely-extra"
dynamic = ["version"]
description = "Extra useful functions for the python shapely package"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8.0"
authors = [
    { name = "Shawn Taylor", email = "shawntaylor@weecology.org" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "scipy",
    "shapely",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/sdtaylor/shapely_extra"

[tool.hatch.version]
path = "src/shapely_extra/__init__.py"

[tool.hatch.build]
packages = ["src/shapely_extra"]
